-- documentation, see http://haskell.org/cabal/users-guide/

name:                exitcode-process
version:             0.1.0.0
synopsis:            A process library that uses the `exitcode` package.
description:       
  <<https://raw.githubusercontent.com/qfpl/assets/master/data61-transparent-bg.png>>
  .
  A process library that uses the `exitcode` package.
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (C) 2018 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Control
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/exitcode-process
bug-reports:         https://github.com/qfpl/exitcode-process/issues
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository   head
  type:             git
  location:         git@github.com:qfpl/exitcode-process.git

library
  exposed-modules:     Control.Process
  build-depends:       base >=4.8 && <4.13
                     , exitcode
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite             tests
  build-depends:       QuickCheck >=2.9.2 && <2.13
                     , base >=4.8 && <4.13
                     , checkers >=0.4.6 && <0.5
                     , exitcode-process
                     , hedgehog >=0.5 && <0.7
                     , lens >=4.15 && <4.18
                     , tasty >=0.11 && <1.2
                     , tasty-hunit >=0.9 && <0.11
                     , tasty-hedgehog >= 0.1 && <0.3
                     , tasty-quickcheck >=0.8.4 && <0.11
                     , transformers >=0.4.1 && <5.5
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
